--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
 </head> 
 
 <body>
@@ -147,6 +147,6 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/main.js"></script>
 </body>
 </html>
